# llm-rl

./: .gitignore  env.sh  main.py  pyproject.toml
.agents/skills/apptainer/: SKILL.md
.agents/skills/memory/: SKILL.md
.agents/skills/setup/: SKILL.md
.agents/skills/slurm/: SKILL.md
.agents/skills/vllm/: SKILL.md
llm_rl/: _transfer.py  inf.py  model.py  nvshmem_transport.py  rdma.py  transfer.py
